<resources>
    <string name="app_name">Humara Himachal</string>
    <string name="hydroTitle">HydroProjects</string>

    <string name="admobappid">ca-app-pub-1120908039526827~7269614888</string>

    <string name="bannerid">ca-app-pub-1120908039526827/2017288207</string>

    <string name="bannertestingid">ca-app-pub-3940256099942544/6300978111</string>

    <string name="interstialid">ca-app-pub-1120908039526827/6886471505</string>

    <string name="testinigid">ca-app-pub-3940256099942544/1033173712</string>

    <string name="historydatafirebase">himachal history</string>

    <string name="notavailable">Not Available</string>
    <string name="geographicextra">LoadKey</string>
    <string name="templecheck">temple</string>
    <string name="lakescheck">lakes</string>
    <string name="nationalparkcheck">nationalpark</string>
    <string name="heritagecheck">worldheritage</string>
    <string name="mountainpasscheck">mountainpass</string>
    <string name="fairscheck">Fairs and Festivals</string>

    <string name="districtDaTa">Himachal Districts</string>
    <string name="somethingwrong">Something Went Wrong</string>

    <string name="districtfragment">districtbundle</string>
    <string name="historyBundle">historybundle</string>

    <string name="situatedat">Situated At</string>
    <string name="area_covered">Total Area Covered</string>
    <string name="fairandfestival">Fairs and Festivals</string>

    <string name="riverstitle">Himachal Rivers</string>
    <string name="welcome">Welcome,</string>
    <string name="signin">Sign in to Continue,</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password?</string>
    <string name="createaccount">Create Account</string>
    <string name="signup">Sign Up to get Started!</string>
    <string name="newUser">I\'m a new user.</string>
    <string name="alreadyuser">I\'m already a member.</string>
    <string name="signIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="fullName">Full Name</string>
    <string name="register">Register</string>
    <string name="emailError">Enter valid email address</string>
    <string name="nameError">Enter valid name</string>
    <string name="passwordError">Enter valid password</string>
    <string name="googleSignINClientId">183049360493-nr565qdq1pt6khong2vlt2n5ekg1gv38</string>
    <string name="progrss">Wait...Registering</string>
    <string name="registered">user registered successfully</string>
    <string name="loginwait">Wait.. Log In</string>
    <string name="emailnotregistered">Email is not registered please provide registered email</string>
    <string name="resetpass">Reset Password</string>
    <string name="emailsent">Reset Email sent to your Email</string>
    <string name="home">Home</string>
    <string name="setting">Settings</string>
    <string name="about">About Himachal</string>
    <string name="districts">Districts</string>
    <string name="news_updates">News Feeds</string>
    <string name="news_paper">News Paper</string>
    <string name="logout">LogOut</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="change_password">Change Password</string>
    <string name="About">About Himachal</string>
    <string name="loadingData">Wait...Loading Data</string>
    <string name="read_more"><u>Read More</u></string>

    <string name="weeklynewspaper">Weekly Newspaper</string>
    <string name="newspaper">News Paper</string>

    <string name="publishedat">Published At:</string>
    <string name="source">Source:</string>
    <string name="open">Open With</string>
    <string name="newsfeed">News Feed</string>
    <string name="history">Himachal History</string>
    <string name="atglance">Himachal At Glance</string>
    <string name="geography">Himachal Geography</string>
    <string name="personality">Himachal Famous Personality</string>
    <string name="places">Famous Places</string>
    <string name="sampleData">
            <body style="text-align:justify">
        Consulted perpetual of pronounce me delivered. Too months nay end change relied who beauty wishes matter. Shew of john real park so rest we on. Ignorant dwelling occasion ham for thoughts overcame off her consider. Polite it elinor is depend. His not get talked effect worthy barton. Household shameless incommode at no objection behaviour. Especially do at he possession insensible sympathize boisterous it. Songs he on an widen me event truth. Certain law age brother sending amongst why covered. Consulted perpetual of pronounce me delivered. Too months nay end change relied who beauty wishes matter. Shew of john real park so rest we on.
        Ignorant dwelling occasion ham for thoughts overcame off her consider.
        Polite it elinor is depend. His not get talked effect worthy barton.
        Household shameless incommode at no objection behaviour.
        Especially do at he possession insensible sympathize boisterous it.
        Songs he on an widen me event truth.
        Certain law age brother sending amongst why covered.
            </body>
    </string>
    <string name="general_info">General Info</string>
    <string name="ministers">Ministers</string>
    <string name="river">Rivers</string>
    <string name="temples">Temples</string>
    <string name="lakes">Lakes</string>
    <string name="nationalpark">National Park</string>
    <string name="wildlifesantuary">WildLife Sanctuary</string>
    <string name="heritage">UNESCO Heritage</string>
    <string name="mountainpass">Mountain pass</string>
    <string name="powerProjects">Hydroelectric Projects</string>

    <!--   River Info Placeholder-->
    <string name="originPlace">Origin Place</string>
    <string name="hpentry">Enter Into Himachal At</string>
    <string name="hpexit">Exit From Himachal At</string>
    <string name="hpLength">Length In Himachal</string>
    <string name="catchmentHp">Total Catchment In Himachal</string>
    <string name="tributary">Tributary Rivers in Himachal</string>
    <string name="mainPlace">Main Place on Bank in Himachal</string>
    <string name="sansName">Sanskrit Name</string>
    <string name="vedicName">Vedic Name</string>

    <!--    River Info -->
    <string name="satlujName">Satluj River</string>
    <string name="satlujorginPlace">Mansrover Lake From Rakes Lake (Tibet)</string>
    <string name="satlujhpEntry">Shipki Kinnaur</string>
    <string name="satlujhpExit">Bhakhra Bilaspur</string>
    <string name="satlujLen">320 km</string>
    <string name="satlujCatch">20,000 Sq. KM.</string>
    <string name="satlujTr">Baspa, Spiti, Nogli Khad, Soan River</string>
    <string name="satlujF">Namgia, Kalpa, Rampur, Tattapani, Suni, and Bilaspur</string>
    <string name="satlujS">Shatadru</string>
    <string name="satlujv">Satadri</string>

    <string name="BName">Beas River</string>
    <string name="BOP">Rohtang Pass Kullu HP at Altitude 4,350m</string>
    <string name="BOHP">Rohtang Pass Kullu HP at Altitude 4,350m</string>
    <string name="BEHP">Mirthal Kangra</string>
    <string name="BLHP">256 km</string>
    <string name="BCHP">2,320 Sq.Km.</string>
    <string name="BTHP">Awa, Banner, Banganga, Chakki, Uhl, Tirthan, Suketi, Sainj, Parvati, Patlikahal, Manuni, Luni, Hurla , Guj</string>
    <string name="BMHP">Manali, Kullu, Mandi, Bajaura, Pandoh, Sujanpur, Tihra, Nadaun, Dehra-Gopipur</string>
    <string name="BS">Vipasa</string>
    <string name="BV">Arjakiya</string>

    <string name="RNnam">Ravi River</string>
    <string name="ROP">Bara Banghal(a branch of Dhauladhar) Kangra</string>
    <string name="ROHP">Bara Banghal(a branch of Dhauladhar) Kangra</string>
    <string name="REHP">Kheri Chamba</string>
    <string name="RLHP">158 km</string>
    <string name="Rchp">5,451 Sq.Km.</string>
    <string name="RThp">Bhadal, Siul, Baira, Tant Giri</string>
    <string name="RMhp">Bharmaur, Modhpur, Chamba Town</string>
    <string name="RS">Irawati</string>
    <string name="RV">Parushani</string>

    <string name="CName">Chenab River</string>
    <string name="COP">Baralacha La Pass Lahaul and Spiti Districts</string>
    <string name="COHP">Baralacha La Pass Lahaul and Spiti Districts</string>
    <string name="CEhp">Sansari Nala Chamba</string>
    <string name="CLhp">122 km</string>
    <string name="CChp">7,500 Sq. Km.</string>
    <string name="CThp">Bhaga River, Chandra River</string>
    <string name="CMhp">Tandi</string>
    <string name="CS">Asikini</string>
    <string name="CV">Chandrabhaga</string>

    <string name="YName">Yamuna River</string>
    <string name="YOP">Yamunotri in Gharwal Hills Utrakhand</string>
    <string name="YOHP">Khadar Majri Sirmaur </string>
    <string name="YEhp">Tajewala  Sirmaur</string>
    <string name="YLhp">22 km</string>
    <string name="YChp">2,320 Sq. Km.</string>
    <string name="YThp">Tons, Pabbar, Giri Ganga</string>
    <string name="YMhp">Paonta Sahib</string>
    <string name="YS">Yamunotri</string>
    <string name="YV">Kalindi</string>
    <string name="situatedin">Situated In</string>
    <string name="capacity">Capacity</string>
    <string name="streamriver">Stream River</string>
    <string name="main_river">Main River</string>
    <string name="company">Company</string>
    <string name="district_fact">District Fact</string>
    <string name="district_headquarter">District Headquarter</string>
    <string name="founded_in">Founded In</string>
    <string name="tehsiles">Tehsiles</string>
    <string name="ancient_name">Ancient Name</string>
    <string name="reorganized_as_district">Reorganized as district</string>
    <string name="deputy_commissioner">Deputy Commissioner</string>
    <string name="area">Area</string>
    <string name="population">Population</string>
    <string name="male_population">Male Population</string>
    <string name="female_pop">Female Population</string>
    <string name="density_population_per_km">Density Population Per Km.</string>
    <string name="total_number_of_assembly_constituencies">Total Number of assembly constituencies</string>
    <string name="tehsils">Tehsils</string>
    <string name="neigh">Neighbours</string>
    <string name="off_web">Official Website</string>
    <string name="rivers">Rivers</string>
    <string name="notconnected_connect">Not Connected to internet! Please connect to intenet</string>
    <string name="contact_us_email">For any query write us on: humarahimachalapp@gmail.com</string>
    <string name="network_error">Network error occurred. Please connect to internet</string>
</resources>

