<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/parentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/subMargin"
        android:layout_margin="@dimen/subMargin"
        android:elevation="@dimen/ele"
        android:background="@color/lightAccentColor"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvRiverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Satluj"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="@dimen/mainText"
            />
               <LinearLayout
                   style="@style/linearRivers"
                   >

                   <TextView
                       style="@style/riverinfotext"
                       android:layout_height="wrap_content"
                       android:text="@string/originPlace"
                       />
                   <TextView
                       android:id="@+id/tvOrigin"
                       android:text="Mansrover River"
                       style="@style/riverinfotext"
                       android:paddingVertical="@dimen/subMargin"
                       />
               </LinearLayout>
        <LinearLayout
            style="@style/linearRivers"
            >
            <TextView
                style="@style/riverinfotext"
                android:text="@string/hpentry"
                />
            <TextView
                android:id="@+id/tvOriginHp"
                android:text="Mansrover River"
                style="@style/riverinfotext"
                android:paddingVertical="@dimen/subMargin"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/linearRivers"
            >
            <TextView
                style="@style/riverinfotext"
                android:text="@string/hpexit"
                />
            <TextView
                android:id="@+id/tvExitHP"
                android:text="Mansrover River"
                style="@style/riverinfotext"
                android:paddingVertical="@dimen/subMargin"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/linearRivers"
            >
            <TextView
                style="@style/riverinfotext"
                android:text="@string/hpLength"
                />
            <TextView
                android:id="@+id/tvLengthHp"
                android:text="Mansrover River"
                style="@style/riverinfotext"
                android:paddingVertical="@dimen/subMargin"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/linearRivers"
            >
            <TextView
                style="@style/riverinfotext"
                android:text="@string/catchmentHp"
                />
            <TextView
                android:id="@+id/tvCatchmentHP"
                android:text="Mansrover River"
                style="@style/riverinfotext"
                android:paddingVertical="@dimen/subMargin"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/linearRivers"
            >
            <TextView
                style="@style/riverinfotext"
                android:text="@string/tributary"
                />
            <TextView
                android:id="@+id/tvTrubutary"
                android:text="Mansrover River"
                style="@style/riverinfotext"
                android:paddingVertical="@dimen/subMargin"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/linearRivers"
            >
            <TextView
                style="@style/riverinfotext"
                android:text="@string/mainPlace"
                />
            <TextView
                android:id="@+id/tvMainPlace"
                android:text="Mansrover River"
                style="@style/riverinfotext"
                android:paddingVertical="@dimen/subMargin"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/linearRivers"
            >
            <TextView
                style="@style/riverinfotext"
                android:text="@string/sansName"
                />
            <TextView
                android:id="@+id/tvSanskritName"
                android:text="Mansrover River"
                style="@style/riverinfotext"
                android:paddingVertical="@dimen/subMargin"
                />
        </LinearLayout>
        <LinearLayout
            style="@style/linearRivers"
            >
            <TextView
                style="@style/riverinfotext"
                android:text="@string/vedicName"
                />
            <TextView
                android:id="@+id/tvVedicName"
                android:text="Mansrover River"
                style="@style/riverinfotext"
                android:paddingVertical="@dimen/subMargin"
                />
        </LinearLayout>
    </LinearLayout>
</layout>